// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider it should pass in a custom prop 1`] = `
<div
  aria-hidden="true"
  className="divider"
  id="testDivider"
/>
`;

exports[`Divider it should pass in a string of text 1`] = `
<div
  aria-hidden="true"
  className="divider divider-text"
  data-content="Divider Test String"
  id="testDivider"
/>
`;

exports[`Divider should render a basic component 1`] = `
<div
  aria-hidden="true"
  className="divider"
/>
`;
